fix invisible modal bug and add test case

--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -11,7 +11,7 @@ body {
   color: #1c2c3b !important;
 }
 
-.modal {
+.modal-background {
   position: fixed;
   top: 0;
   left: 0;
@@ -23,7 +23,7 @@ body {
   align-items: center;
 }
 
-.modal_window {
+.modal-window {
   position: relative;
   background-color: white;
   padding: 4em 2em;
